# ML-Sketch

./: .gitignore  LSTM_Sketch_v01.ipynb  Linear regression georg.ipynb  LinearRegression.ipynb  Linear_regression.ipynb  Naamloos.ipynb  README.md  Random_Forest Testing all models.ipynb  Random_Forest Training and Testing.ipynb  Random_Forest.ipynb  Skecth_LReg_ESN.ipynb  Skecth_LSTM.ipynb  Sketch_LRen_Enhanced.ipynb  Wierd linear regression.ipynb  linear_reg10000  linear_reg70000  pyproject.toml  utils.py
.ipynb_checkpoints/: LSTM_Sketch_v01-checkpoint.ipynb  Naamloos-checkpoint.ipynb  Skecth_LReg_ESN-checkpoint.ipynb  Skecth_LSTM-checkpoint.ipynb
models/: RF_n10_d10.sav  RF_n20_d10.sav  linear_reg1000
old files/: Skecth_LReg_ESN.ipynb
