[tool.poetry]
name = "ml-sketch"
version = "0.1.0"
description = "Machine learning project in python for creating sketches"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.2.9"
numpy = "^1.19.4"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
tensorflow = "^2.4.0"
svgwrite = "^1.4"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
